--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,9 @@
 
 
 
+
+
+
 }
 :root {
   --shadow-cyanShadow: 0px 0px 20px 0px rgba(94, 206, 220, 0.5);
@@ -41,7 +44,7 @@ body {
   font-family: var(--font-display);
   color: var(--color-white);
 }
-html, body {
+/* html, body {
   overflow-x: hidden;
   width: 100%;
-}
+} */
